--- a/style.css
+++ b/style.css
@@ -7,12 +7,11 @@
 body {
   height: 100vh;
   width: 100vw;
+  background-color: black;
 }
 
 .container {
   height: inherit;
-  background-color: black;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -342,4 +341,8 @@ body {
   to {
     transform: rotate(360deg) translate(520px) rotate(-360deg);
   }
+}
+
+.container * {
+  scale: 0.8;
 }
